--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 TZ="Europe/Warsaw"
 REDIS_URL=redis://redis_stack:6379
 NEXT_PUBLIC_APP_HOST=http://localhost:3000
+NEXT_PUBLIC_FILES_HOST=http://localhost:8080
 SECRET_COOKIE_PASSWORD=2gyZ3GDw3LHZQKDhPmPDL3sjREVRXPr8
